[package]
name = "lab01_2022_input_validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8.6"
lazy_static = "1.4.0"
regex = "1"
uuid = { version = "1", features = ["v5"] }
infer = "0.7"
